# Rust_learn

./: .gitignore  README.md
barnches/: Cargo.toml
barnches/src/: main.rs
challenge/: challenge1.rs
example/: alias.rs  array.rs  capture.rs  cast.rs  closure.rs  closure_input.rs  compound_type.rs  debug-example.rs  debug-example3.rs  debug.rs  declare.rs  deconstruction.rs  deconstruction_enum.rs  dereference.rs  destructure_struct.rs  enum_clike.rs  enumeration.rs  enumeration1.rs  enumeration2.rs  enumeration3.rs  expression.rs  for.rs  for_iter.rs  format.rs  format2.rs  from.rs  fromstr.rs  func.rs  hof.rs  if_else.rs  if_let.rs  if_let_enum.rs  into.rs  literal.rs  loop.rs  loop_return.rs  match.rs  match_bind.rs  match_enum.rs  match_enum2.rs  (+16 more)
example/crate/: executable.rs  library.rlib  rary.rs
example/generic/: generic.rs  generic_func.rs  generic_impl.rs  generic_new_type.rs  generic_trait.rs
example/lib/: spawn.rs
example/macro/: say_hello.rs
example/property/: cfg.rs  cfg_custom.rs  dead_code.rs  lib.rs  library.rlib
foo/: Cargo.toml
func/src/: calculate_length.rs  change_quote.rs  clone.rs  copy.rs  main.rs  return_scope.rs  return_tuple_move.rs  string.rs
guessing_game/src/: main.rs
hello_web/: hello.html
hello_web/src/: main.rs
minigrep/src/: main.rs
mouth/: Cargo.toml
mouth/src/: main.rs
practice/: enum.rs  enum_message.rs  enum_option.rs  match.rs
practice/collections/: hash_map.rs  (+3 more)
recursion/: factorial.rs  main.rs
restaurant/: Cargo.toml
slice/: first_world.rs  slice.rs  string_slice.rs
structs/: field.rs
(+40 files in other folders)
