[package]
name = "foo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.17.1" # 来自crates.io
rand = {git = "https://github.com/rust-lang-nursery/rand"} #来自网上的仓库
# bar = { path = "../bar" } # 来自本地文件系统的路径